--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ function login(){
       show("Giriş başarılı","success");
 
       setTimeout(()=>{
-        location.replace("menu.html");
+        location.replace("menü.html");
       },700);
     })
     .catch(()=>{
