--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ button{
   gap:12px;
   margin-top:18px;
   font-size:13px;
-  flex-wrap:wrap;
+white-space:nowrap;
 }
 
 .bottom-actions a{
@@ -125,6 +125,19 @@ button{
   opacity:.7;
   pointer-events:none;
 }
+.bottom-actions{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:10px;
+  margin-top:18px;
+  font-size:13px;
+  white-space:nowrap;
+}
+.bottom-actions a{
+  font-size:12.5px;
+}
+
 </style>
 </head>
 
