--- a/bugun.html
+++ b/bugun.html
@@ -242,17 +242,17 @@ div.innerHTML = `
   </div>
 
   <div class="item-stats">
-    👥 Toplam Denetlenen Personel:
+    👥 Toplam:
     <span class="stat-num total">${d.total}</span>
 
     &nbsp;&nbsp;
 
-    ✅ Görevde Uygun Personel:
+    ✅ Görevde:
     <span class="stat-num ok">${d.ok}</span>
 
     &nbsp;&nbsp;
 
-    ❌ Uygunsuz Personel:
+    ❌ Uygunsuz:
     <span class="stat-num bad">${d.bad}</span>
   </div>
 `;
