--- a/menü.html
+++ b/menü.html
@@ -210,6 +210,25 @@ body{
       </div>
       <p>Yapılan denetimleri detaylı incele</p>
     </a>
+<!-- KİMLİK SÜRE KONTROL -->
+<a href="kimlik.html" class="card"
+   onclick="sessionStorage.setItem('menuAllowed','ok')">
+
+  <div class="card-head">
+    <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+         stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="4" width="18" height="16" rx="2"/>
+      <path d="M8 2v4"/>
+      <path d="M16 2v4"/>
+      <path d="M3 10h18"/>
+      <path d="M8 14h2"/>
+      <path d="M14 14h2"/>
+    </svg>
+    <h3>Kimlik Süre Kontrol</h3>
+  </div>
+
+  <p>Personelin kimlik geçerlilik sürelerini takip et</p>
+</a>
 
   </div>
 </div>
