--- a/menü.html
+++ b/menü.html
@@ -2,247 +2,287 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Kimlik Süresi Operasyon Paneli</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Denetleme Paneli</title>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<meta name="viewport"
+content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
 <style>
+*{
+  box-sizing:border-box;
+  -webkit-tap-highlight-color:transparent;
+}
+
+html,body{
+  margin:0;
+  min-height:100%;
+  overscroll-behavior:none;
+}
+
 body{
- margin:0;
- font-family:system-ui,Segoe UI;
- background:#0b1220;
- color:#e5e7eb;
-}
-.container{max-width:1400px;margin:auto;padding:20px}
-h1{margin-bottom:6px}
-.sub{opacity:.6;margin-bottom:16px}
-
-.top{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:14px}
-.top input,.top select{
- padding:10px;border-radius:8px;border:none;font-size:14px
+  font-family:'Inter',sans-serif;
+  background:
+    radial-gradient(circle at 15% 10%,#3b82f6,#020617 60%),
+    radial-gradient(circle at 85% 90%,#22c55e,#020617 60%);
+  color:#fff;
 }
 
-.stats{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:16px}
-.stat{
- background:#111827;padding:10px 14px;border-radius:10px;font-size:14px
+/* APP */
+.app{
+  max-width:420px;
+  margin:0 auto;
+  padding:
+    calc(env(safe-area-inset-top) + 18px)
+    18px
+    calc(env(safe-area-inset-bottom) + 18px);
 }
 
-.red{color:#ef4444}
-.orange{color:#fb923c}
-.yellow{color:#facc15}
-
-.table-wrap{overflow:auto;background:#020617;border-radius:14px}
-table{width:100%;border-collapse:collapse;font-size:14px}
-th,td{
- padding:10px 12px;border-bottom:1px solid #1f2937;
- text-align:left;white-space:nowrap
-}
-th{background:#020617;position:sticky;top:0;z-index:2}
-tr:hover{background:#020617}
-
-.badge{
- padding:4px 8px;border-radius:6px;font-weight:700;font-size:12px
-}
-.b-red{background:#7f1d1d;color:#fecaca}
-.b-orange{background:#7c2d12;color:#fed7aa}
-.b-yellow{background:#713f12;color:#fef08a}
-
-.btn{
- padding:6px 10px;border-radius:6px;
- background:#22c55e;color:#052e16;
- font-weight:700;text-decoration:none;font-size:12px
+/* HEADER */
+.header{
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-start;
+  margin-bottom:18px;
 }
 
-.blink-red{
- color:#fecaca;font-weight:800;
- animation:blink 1s infinite
+.greet{
+  font-size:30px;
+  font-weight:800;
+  display:flex;
+  gap:8px;
 }
-@keyframes blink{
- 0%{background:#7f1d1d}
- 50%{background:#ef4444}
- 100%{background:#7f1d1d}
+
+.name{
+  font-size:16px;
+  color:#c7d2fe;
+  margin-top:4px;
 }
-.btn-call{
- padding:6px 10px;
- border-radius:6px;
- background:#38bdf8;
- color:#082f49;
- font-weight:700;
- text-decoration:none;
- font-size:12px;
- margin-left:6px;
+
+.logout{
+  background:#ef4444;
+  border:none;
+  color:#fff;
+  padding:10px 14px;
+  border-radius:14px;
+  font-weight:600;
+}
+
+/* CARDS */
+.cards{
+  display:grid;
+  gap:14px;
+}
+
+/* CARD */
+.card{
+  padding:16px 18px;
+  border-radius:20px;
+  background:linear-gradient(135deg,rgba(255,255,255,.12),rgba(255,255,255,.05));
+  backdrop-filter:blur(12px);
+  text-decoration:none;
+  color:#fff;
+  box-shadow:0 12px 30px rgba(0,0,0,.35);
+}
+
+/* CARD HEAD */
+.card-head{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+
+.icon{
+  width:32px;
+  height:32px;
+  color:#22c55e;
+}
+
+.card.primary .icon{
+  color:#4ade80;
+}
+
+.card h3{
+  margin:0;
+  font-size:17px;
+  font-weight:700;
+}
+
+.card p{
+  margin:8px 0 0;
+  font-size:14px;
+  color:#e0e7ff;
+  line-height:1.4;
+}
+
+/* PRIMARY BORDER ANIMATION */
+.card.primary{
+  border:2px solid transparent;
+  background:
+    linear-gradient(#0f172a,#0f172a) padding-box,
+    linear-gradient(90deg,#22c55e,#60a5fa,#22c55e) border-box;
+  background-size:200% 100%;
+  animation:borderFlow 3s linear infinite;
+}
+
+@keyframes borderFlow{
+  from{background-position:0% 0%}
+  to{background-position:200% 0%}
+}
+
+/* FOOTER */
+.footer{
+  position:fixed;
+  right:12px;
+  bottom:calc(env(safe-area-inset-bottom) + 10px);
+  font-size:11px;
+  color:#c7d2fe;
+  opacity:.85;
+  pointer-events:none;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-<h1> Kimlik Süresi Görüntüleme Paneli</h1>
+<div class="app">
+
+  <!-- HEADER -->
+  <div class="header">
+    <div>
+      <div class="greet" id="greeting">Yükleniyor…</div>
+      <div class="name" id="userName">Personel</div>
+    </div>
+    <button class="logout" onclick="goIndex()">Çıkış</button>
+  </div>
+
+  <!-- MENU -->
+  <div class="cards">
+
+    <!-- DENETLE -->
+    <a href="denetle.html" class="card primary"
+       onclick="sessionStorage.setItem('menuAllowed','ok')">
+
+      <div class="card-head">
+        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+             stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 3l7 4v5c0 5-3.5 8-7 9-3.5-1-7-4-7-9V7l7-4z"/>
+          <path d="M9 12l2 2 4-4"/>
+        </svg>
+        <h3>Denetleme Yap</h3>
+      </div>
+      <p>Personelin görev ve nöbet sürecini anlık denetle</p>
+    </a>
+
+    <!-- PERSONEL ARA -->
+    <a href="personelara.html" class="card"
+       onclick="sessionStorage.setItem('menuAllowed','ok')">
+
+      <div class="card-head">
+        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+             stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="11" cy="11" r="7"/>
+          <path d="M21 21l-4.3-4.3"/>
+        </svg>
+        <h3>Personel Ara</h3>
+      </div>
+      <p>Personel bilgilerini hızlıca görüntüle</p>
+    </a>
+
+    <!-- DENETİM GEÇMİŞİ -->
+   <a href="bugun.html" class="card"
+   onclick="sessionStorage.setItem('menuAllowed','ok')">
 
 
-<div class="top">
- <input id="search" placeholder="İsim / TC / Proje ara">
- <select id="filter">
-  <option value="all">Tümü</option>
-  <option value="red">0–4 Ay (Kritik)</option>
-  <option value="orange">6–9 Ay</option>
-  <option value="yellow">9–12 Ay</option>
- </select>
+      <div class="card-head">
+        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+             stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M3 3v18h18"/>
+          <rect x="7" y="12" width="3" height="6"/>
+          <rect x="12" y="9" width="3" height="9"/>
+          <rect x="17" y="6" width="3" height="12"/>
+        </svg>
+        <h3>Denetim Geçmişi</h3>
+      </div>
+      <p>Yapılan denetimleri detaylı incele</p>
+    </a>
+<!-- KİMLİK SÜRE KONTROL -->
+<a href="kimlik.html" class="card"
+   onclick="sessionStorage.setItem('menuAllowed','ok')">
+
+  <div class="card-head">
+    <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+         stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="4" width="18" height="16" rx="2"/>
+      <path d="M8 2v4"/>
+      <path d="M16 2v4"/>
+      <path d="M3 10h18"/>
+      <path d="M8 14h2"/>
+      <path d="M14 14h2"/>
+    </svg>
+    <h3>Kimlik Süre Kontrol</h3>
+  </div>
+
+  <p>Personelin kimlik geçerlilik sürelerini takip et</p>
+</a>
+
+  </div>
 </div>
 
-<div class="stats">
- <div class="stat red">🔴 Kritik: <b id="cRed">0</b></div>
- <div class="stat orange">🟠 6–9 Ay: <b id="cOrange">0</b></div>
- <div class="stat yellow">🟡 9–12 Ay: <b id="cYellow">0</b></div>
-</div>
+<div class="footer">© CGA Güvenlik Sistemi</div>
 
-<div class="table-wrap">
-<table>
-<thead>
-<tr>
-<th>Durum</th>
- <th>Ad Soyad</th>
- <th>Kalan Süre</th>
- <th>Proje</th>
- <th>Kimlik</th>
- <th>Bitiş</th>
- <th>Aksiyon</th>
-</tr>
-</thead>
-<tbody id="tbody"></tbody>
-</table>
-</div>
-
-</div>
+<!-- FIREBASE -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
 firebase.initializeApp({
- apiKey:"AIzaSyCye0QlekBFonTxfeBIlhLc9ia-mleyfUM",
- authDomain:"denetleme-4d3d9.firebaseapp.com",
- databaseURL:"https://denetleme-4d3d9-default-rtdb.firebaseio.com",
- projectId:"denetleme-4d3d9"
+  apiKey:"AIzaSyCye0QlekBFonTxfeBIlhLc9ia-mleyfUM",
+  authDomain:"denetleme-4d3d9.firebaseapp.com",
+  databaseURL:"https://denetleme-4d3d9-default-rtdb.firebaseio.com",
+  projectId:"denetleme-4d3d9"
 });
 
-const db = firebase.database();
-const tbody = document.getElementById("tbody");
-const search = document.getElementById("search");
-const filter = document.getElementById("filter");
+const auth = firebase.auth();
+const db   = firebase.database();
 
-let rows = [];
-let projects = {};
+const greetingEl = document.getElementById("greeting");
+const userNameEl = document.getElementById("userName");
 
-// PROJELERİ ÇEK
-db.ref("projects").once("value").then(s=>{
- s.forEach(p=>{
-  projects[p.key] = p.val().projectName || p.key;
- });
- return db.ref("personnel").once("value");
-}).then(snap=>{
- snap.forEach(p=>{
-  const x = p.val();
-  if(!x.kimlikGecerlilik) return;
-
-  const bitis = new Date(x.kimlikGecerlilik);
-  const gun = Math.ceil((bitis - new Date()) / 86400000);
-  if(gun <= 0 || gun > 365) return;
-
-  let durum="", badge="";
-
-  if(gun <= 120){ durum="red"; badge="🔴"; }
-  else if(gun > 180 && gun <= 270){ durum="orange"; badge="🟠"; }
-  else if(gun > 270 && gun <= 365){ durum="yellow"; badge="🟡"; }
-  else return;
-
-  let kalan = gun <= 90
-    ? `${gun} gün`
-    : `${Math.floor(gun/30)} ay ${gun%30} gün`;
-
-  // 🔥 PROJE MANTIĞI (SENİN İSTEDİĞİN GİBİ)
-  let projectId = "Tanımsız";
-
-  if (x.project && typeof x.project === "string") {
-    projectId = x.project;
-  } else if (x.projects && typeof x.projects === "object") {
-    const keys = Object.keys(x.projects);
-    if (keys.length > 0) projectId = keys[0];
+auth.onAuthStateChanged(user=>{
+  if(!user){
+    location.replace("index.html");
+    return;
   }
 
-  rows.push({
-    durum,
-    badge,
-    ad: x.adSoyad || "",
-    tc: p.key,
-    proje: projects[projectId] || projectId,
-    kimlik: x.kimlikTuru || "",
-    bitis: bitis.toLocaleDateString("tr-TR"),
-    kalan,
-    tel: x.telefon || ""
+  db.ref("users/"+user.uid).once("value",snap=>{
+    userNameEl.innerText =
+      snap.val()?.fullName ||
+      user.displayName ||
+      user.email.split("@")[0];
+
+    greetingEl.innerHTML = getGreeting() + " 👋";
   });
- });
- render();
 });
 
-function render(){
- const q = search.value.toLowerCase();
- const f = filter.value;
- tbody.innerHTML = "";
- let cr=0, co=0, cy=0;
-
- rows.filter(r=>{
-  if(f !== "all" && r.durum !== f) return false;
-  return r.ad.toLowerCase().includes(q)
-   || r.tc.includes(q)
-   || r.proje.toLowerCase().includes(q);
- }).forEach(r=>{
-  if(r.durum==="red") cr++;
-  if(r.durum==="orange") co++;
-  if(r.durum==="yellow") cy++;
-
- const msg = `Sayın ${r.ad},
-
-Kimlik Geçerlilik Tarihi: ${r.bitis}
-
-Kimliğinizin sona ermesine ${r.kalan} kalmıştır.
-Kimlik yenileme süreci ortalama 4–6 ay sürmektedir.
-
-Herhangi bir mağduriyet yaşanmaması ve görev devamlılığının sağlanabilmesi adına,
-yenileme işlemlerinizin ivedilikle başlatılması gerekmektedir.
-
-Bilgi ve yönlendirme için lütfen tarafımızla iletişime geçiniz.`;
-
-  tbody.innerHTML += `
-<tr>
- <td><span class="badge b-${r.durum}">${r.badge}</span></td>
- <td>${r.ad}</td>
- <td class="${r.durum==="red"?"blink-red":""}">${r.kalan}</td>
- <td>${r.proje}</td>
- <td>${r.kimlik}</td>
- <td>${r.bitis}</td>
- <td>
- ${r.tel ? `
-  <a class="btn" target="_blank"
-   href="https://wa.me/90${r.tel.replace(/\D/g,"")}?text=${encodeURIComponent(msg)}">
-   WhatsApp</a>
-
-  <a class="btn-call"
-   href="tel:+90${r.tel.replace(/\D/g,"")}">
-   Ara</a>
- ` : ""}
-</td>
-
-  </tr>`;
- });
-
- cRed.textContent = cr;
- cOrange.textContent = co;
- cYellow.textContent = cy;
+function getGreeting(){
+  const h = new Date().getHours();
+  if(h >= 5 && h <= 11) return "Günaydın";
+  if(h >= 12 && h <= 16) return "Tünaydın";
+  if(h >= 17 && h <= 22) return "İyi Akşamlar";
+  return "İyi Geceler";
 }
 
-search.oninput = render;
-filter.onchange = render;
+function goIndex(){
+  sessionStorage.clear();
+  location.replace("index.html");
+}
 </script>
+
 </body>
 </html>
