--- a/kimlik.html
+++ b/kimlik.html
@@ -181,9 +181,9 @@ tr:hover{background:#020617}
 </div>
 
 <div class="stats">
- <div class="stat red">🔴 Kritik: <b id="cRed">0</b></div>
- <div class="stat orange">🟠 6–9 Ay: <b id="cOrange">0</b></div>
- <div class="stat yellow">🟡 9–12 Ay: <b id="cYellow">0</b></div>
+ <div class="stat red">Kritik: <b id="cRed">0</b></div>
+ <div class="stat orange">6–9 Ay: <b id="cOrange">0</b></div>
+ <div class="stat yellow">9–12 Ay: <b id="cYellow">0</b></div>
 </div>
 
 <div class="table-wrap">
