--- a/menü.html
+++ b/menü.html
@@ -233,7 +233,7 @@ body{
   </div>
 </div>
 
-<div class="footer">© CGA Güvenlik Sistemi</div>
+<div class="footer">© 2026 CGA Güvenlik Sistemi</div>
 
 <!-- FIREBASE -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -286,3 +286,4 @@ function goIndex(){
 
 </body>
 </html>
+
