--- a/menü.html
+++ b/menü.html
@@ -227,7 +227,7 @@ body{
     <h3>Kimlik Süre Kontrol</h3>
   </div>
 
-  <p>Personelin kimlik geçerlilik sürelerini takip et</p>
+  <p>Kimlik geçerlilik sürelerini takip et</p>
 </a>
 
   </div>
@@ -286,4 +286,5 @@ function goIndex(){
 
 </body>
 </html>
+
 
