--- a/kimlik.html
+++ b/kimlik.html
@@ -413,7 +413,9 @@ function openDetail(r){
 Kimlik Bitiş Tarihi: ${r.bitis}
 Kalan Süre: ${r.kalan}
 
-Yenileme işlemlerinin başlatılması gerekmektedir.`;
+Kimlik yenileme süreci ortalama 4–6 ay sürmektedir.
+Herhangi bir mağduriyet yaşanmaması ve görev devamlılığının sağlanabilmesi adına,
+yenileme işlemlerinizin ivedilikle başlatılması gerekmektedir.`;
 
  document.getElementById("mWp").href =
   `https://wa.me/90${r.tel}?text=${encodeURIComponent(msg)}`;
